--- a/miniprogram-1/miniprogram/pages/history/history.wxss
+++ b/miniprogram-1/miniprogram/pages/history/history.wxss
@@ -67,7 +67,7 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  margin-bottom: 24rpx;
+  /* margin-bottom: 24rpx; */
 }
 
 .item-main {
